--- a/app/views/UserTypeView.scala.html
+++ b/app/views/UserTypeView.scala.html
@@ -22,9 +22,9 @@
         inputRadio: components.inputRadio,
         button: components.button)
 
-@(form: Form[_])(implicit request: Request[_], messages: Messages)
+@(form: Form[_], backLink: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = messages("userType.pageTitle"), form = Some(form), showBackLink = false) {
+@layout(pageTitle = messages("userType.pageTitle"), form = Some(form), customBackLinkUrl = Some(backLink)) {
 
     @errorSummary(form.errors)
 
