--- a/app/views/ImporterDanView.scala.html
+++ b/app/views/ImporterDanView.scala.html
@@ -25,14 +25,21 @@
 @(form: Form[_], backLink: Call)(implicit request: Request[_], messages: Messages)
 
     @layout(
-        pageTitle = messages("enterCustomsProcedureCode.pageTitle"),
+        pageTitle = messages("importerDan.pageTitle"),
         form = Some(form),
         customBackLinkUrl = Some(backLink)) {
 
         @errorSummary(form.errors)
 
-        @formHelper(action = controllers.routes.EnterCustomsProcedureCodeController.onSubmit()) {
-            @inputText(form, "cpc", "cpc", messages("enterCustomsProcedureCode.pageHeader"), true, classes = Some("govuk-fieldset__legend govuk-input--width-10"))
+        @formHelper(action = controllers.routes.ImporterDanController.onSubmit()) {
+            @inputText(
+                form = form,
+                id = "value",
+                name = "value",
+                label = messages("importerDan.pageHeader"),
+                isPageHeading = true,
+                classes = Some("govuk-fieldset__legend govuk-input--width-10")
+            )
             @button("common.button.continue")
 
         }
