--- a/app/views/components/inputRadio.scala.html
+++ b/app/views/components/inputRadio.scala.html
@@ -16,13 +16,14 @@
 
 @this(govukRadios: GovukRadios)
 
-@(      form: Form[_],
-        legend: String,
-        items: Seq[RadioItem],
-        legendAsHeading: Boolean = true,
-        hint: Option[Html] = None,
-        classes: String = "govuk-fieldset__legend--l",
-        inline: Boolean = false
+@(
+    form: Form[_],
+    legend: String,
+    items: Seq[RadioItem],
+    legendAsHeading: Boolean = true,
+    hint: Option[Html] = None,
+    classes: String = "govuk-fieldset__legend--l",
+    inline: Boolean = false
 )(implicit messages: Messages)
 
 @govukRadios(Radios(
