CSP now specified against correct config key (#110)

--- a/app/views/partials/Head.scala.html
+++ b/app/views/partials/Head.scala.html
@@ -14,7 +14,6 @@
  * limitations under the License.
  *@
 
-@import views.html.helper.CSPNonce
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcTrackingConsentSnippet
 
 @this(hmrcTrackingConsentSnippet: HmrcTrackingConsentSnippet)
@@ -23,7 +22,7 @@
 
 @headBlock
 
-@hmrcTrackingConsentSnippet(nonce = CSPNonce.get)
+@hmrcTrackingConsentSnippet()
 
  <!--[if lte IE 8]><script src='@controllers.routes.Assets.versioned("javascripts/html5shiv.min.js")'></script><![endif]-->
 <!--[if lte IE 8]><link href='@controllers.routes.Assets.versioned("stylesheets/application-ie-8.css")' rel="stylesheet" type="text/css" /><![endif]-->
