--- a/app/views/ConfirmationView.scala.html
+++ b/app/views/ConfirmationView.scala.html
@@ -19,7 +19,7 @@
         p: components.p
 )
 
-@(reference: String = "")(implicit request: Request[_], messages: Messages)
+@(reference: String = "")(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("confirmation.pageTitle"), showBackLink = false) {
 
@@ -41,10 +41,16 @@
     <a id = "printSaveRestOfMessage" class="print-this__link govuk-body">@messages("confirmation.printSaveRestOfMessage")</a>
 
     @h2(messages("confirmation.whatHappensNext"), id = Some("whatHappensNext"))
-
     @p(Html(messages("confirmation.p2")), id = Some("p2"))
-
     @p(Html(messages("confirmation.p3")), id = Some("p3"))
+
+    @h2(messages("confirmation.helpImproveService"), id = Some("helpImproveService"))
+    <div id="helpImproveServiceLink">
+        @p{
+            @Html(<a href={appConfig.surveyUrl} class="govuk-link">{messages("confirmation.helpImproveServiceLink")}</a>)
+            @Html(messages("confirmation.helpImproveServiceLinkTime"))
+        }
+    </div>
 
 }
 
