--- a/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
+++ b/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
@@ -1,19 +1,18 @@
 @*
- * Copyright 2021 HM Revenue & Customs
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *@
-
+* Copyright 2021 HM Revenue & Customs
+*
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*@
 @this(layout: templates.Layout,
         govukSummaryList: GovukSummaryList,
         h1: components.h1,
@@ -24,11 +23,15 @@
 @(underpaymentType: String, underpaymentSummary: SummaryList)(implicit request: Request[_], messages: Messages)
 
 @layout(
-    pageTitle = messages(""),
+    pageTitle = messages("underpaymentDetailsSummary.pageTitle") + " " +
+            messages(s"underpaymentDetails.$underpaymentType.pageTitle") + " " +
+            messages("underpaymentDetails.dutyMessageEnding"),
     customBackLinkUrl = Some(controllers.underpayments.routes.UnderpaymentDetailsController.onLoad(underpaymentType))
 ) {
 
-    @h1(messages(""))
+    @h1(messages("underpaymentDetailsSummary.pageHeader") + " " +
+            messages(s"underpaymentDetails.$underpaymentType.pageHeader") + " " +
+            messages("underpaymentDetails.dutyMessageEnding"))
 
     @govukSummaryList(underpaymentSummary)
 
