created getMessage on view

--- a/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
+++ b/app/views/underpayments/UnderpaymentDetailSummaryView.scala.html
@@ -1,18 +1,18 @@
 @*
-* Copyright 2021 HM Revenue & Customs
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*@
+ * Copyright 2021 HM Revenue & Customs
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *@
 
 @this(layout: templates.Layout,
         govukSummaryList: GovukSummaryList,
@@ -22,27 +22,21 @@
 )
 @(underpaymentType: String, underpaymentSummary: SummaryList)(implicit request: Request[_], messages: Messages)
 
-@titleMessage = @{
-    underpaymentType match {
-        case "B00" => messages(s"underpaymentDetails.$underpaymentType.pageTitle.lowercase")
-        case "E00" => messages(s"underpaymentDetails.$underpaymentType.pageTitle.lowercase")
-        case _ => messages(s"underpaymentDetails.$underpaymentType.pageTitle")
+@getMessage(isTitle: Boolean = true) = @{
+    val key = if(isTitle) "pageTitle" else "pageHeader"
+    val emptySpace = " "
+    val middleMessage = if(underpaymentType == "B00" | underpaymentType == "E00") {
+        messages(s"underpaymentDetails.$underpaymentType.$key.lowercase")
+    } else {
+        messages(s"underpaymentDetails.$underpaymentType.$key")
     }
-}
-
-@headerMessage = @{
-    underpaymentType match {
-        case "B00" => messages(s"underpaymentDetails.$underpaymentType.pageHeader.lowercase")
-        case "E00" => messages(s"underpaymentDetails.$underpaymentType.pageHeader.lowercase")
-        case _ => messages(s"underpaymentDetails.$underpaymentType.pageHeader")
-    }
+    messages(s"underpaymentDetailsSummary.$key") + emptySpace + middleMessage + emptySpace + messages("underpaymentDetails.dutyMessageEnding")
 }
 
 @layout(
-    pageTitle = messages("underpaymentDetailsSummary.pageTitle") + " " + titleMessage + " " + messages("underpaymentDetails.dutyMessageEnding"),
-    customBackLinkUrl = Some(controllers.underpayments.routes.UnderpaymentDetailsController.onLoad(underpaymentType))) {
+    pageTitle = getMessage(), customBackLinkUrl = Some(controllers.underpayments.routes.UnderpaymentDetailsController.onLoad(underpaymentType))) {
 
-    @h1(messages("underpaymentDetailsSummary.pageHeader") + " " + headerMessage + " " + messages("underpaymentDetails.dutyMessageEnding"))
+    @h1(getMessage(false))
 
     @govukSummaryList(underpaymentSummary)
 
@@ -50,7 +44,6 @@
         @button("common.button.continue")
     }
 }
-
 @{
     //$COVERAGE-OFF$
 }
