--- a/app/views/UploadAuthorityProgressView.scala.html
+++ b/app/views/UploadAuthorityProgressView.scala.html
@@ -24,7 +24,7 @@
         linkButton: components.linkButton
 )
 
-@(key: String, backLink: Call)(implicit request: Request[_], messages: Messages)
+@(key: String, backLink: Call, action: String)(implicit request: Request[_], messages: Messages)
 
 @layout(
     pageTitle = messages("uploadProgress.pageTitle"),
@@ -41,7 +41,7 @@
         @messages("uploadProgress.request")
     }
 
-    @linkButton(url = controllers.routes.UploadAuthorityController.uploadProgress(key).url, messages(("uploadProgress.refresh")))
+    @linkButton(url = action, messages(("uploadProgress.refresh")))
 
 }
 
