--- a/app/views/ChangeUnderpaymentReasonView.scala.html
+++ b/app/views/ChangeUnderpaymentReasonView.scala.html
@@ -17,7 +17,6 @@
 @this(layout: templates.Layout,
         formHelper: FormWithCSRF,
         h1: components.h1,
-        errorSummary: components.errorSummary,
         yesNoRadio: components.yesNoRadio,
         button: components.button,
         govukSummaryList: GovukSummaryList,
@@ -32,10 +31,7 @@
     customBackLinkUrl = Some(backLink)
 ) {
 
-    @errorSummary(form.errors)
-
     @h1(messages("changeUnderpaymentReason.heading", boxNumber))
-
 
     @summaryList.map { reason =>
         @govukSummaryList(reason)
@@ -44,7 +40,7 @@
     <p><a href="#" class="govuk-link">@messages("changeUnderpaymentReason.removeLink")</a></p>
 
     @linkButton(
-        url = controllers.routes.CheckYourAnswersController.onSubmit().url,
+        url = controllers.routes.UnderpaymentReasonSummaryController.onLoad().url,
         value = messages("changeUnderpaymentReason.backToReasons")
     )
 
