--- a/app/views/ChangeUnderpaymentReasonView.scala.html
+++ b/app/views/ChangeUnderpaymentReasonView.scala.html
@@ -15,27 +15,21 @@
  *@
 
 @this(layout: templates.Layout,
-        formHelper: FormWithCSRF,
         h1: components.h1,
-        yesNoRadio: components.yesNoRadio,
-        button: components.button,
         govukSummaryList: GovukSummaryList,
         linkButton: components.linkButton
 )
 
-@(form: Form[_], backLink: Call, summaryList: Seq[SummaryList], boxNumber: Int)(implicit request: Request[_], messages: Messages)
+@(backLink: Call, summaryList: SummaryList, boxNumber: Int)(implicit request: Request[_], messages: Messages)
 
 @layout(
-    form = Some(form),
     pageTitle = messages("changeUnderpaymentReason.heading", boxNumber),
     customBackLinkUrl = Some(backLink)
 ) {
 
     @h1(messages("changeUnderpaymentReason.heading", boxNumber))
 
-    @summaryList.map { reason =>
-        @govukSummaryList(reason)
-    }
+    @govukSummaryList(summaryList)
 
     <p><a href="#" class="govuk-link">@messages("changeUnderpaymentReason.removeLink")</a></p>
 
@@ -43,7 +37,6 @@
         url = controllers.routes.UnderpaymentReasonSummaryController.onLoad().url,
         value = messages("changeUnderpaymentReason.backToReasons")
     )
-
 }
 
 @{
